--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,6 +21,7 @@
 				</ul>
 				<ul class="nav pull-right">
           <% if user_signed_in? %>
+            <li><%= link_to "Add Pin", new_pin_path %></li>
             <li><%= link_to "Settings", edit_user_registration_path %></li>
             <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
           <% else %>
